force-app/main/default/objects/Case/fields/Acceptance_of_Exception__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_of_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for LATAM to capture acceptance of an exception for the case.
BU:-  LATAM</description>
    <label>Acceptance of Exception</label>
    <type>Checkbox</type>
</CustomField>