force-app/main/default/objects/Case/fields/Action_Comment__c.field-meta.xml
<CustomField>
    <fullName>Action_Comment__c</fullName>
    <inlineHelpText>The field has a character limit of 255 characters.</inlineHelpText>
    <label>Action Comment</label>
    <type>TextArea</type>
</CustomField>