force-app/main/default/objects/Case/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Updated Quailty Category</fullName>
            </value>
            <value>
                <fullName>Updated Product</fullName>
            </value>
            <value>
                <fullName>Updated Package Type</fullName>
            </value>
            <value>
                <fullName>Updated Package Size</fullName>
            </value>
            <value>
                <fullName>Updated OTDC Format</fullName>
            </value>
            <value>
                <fullName>Updated OTDC (NOT Plant Code)</fullName>
            </value>
            <value>
                <fullName>Removed Plant Code</fullName>
            </value>
            <value>
                <fullName>Removed - DNM Production</fullName>
            </value>
            <value>
                <fullName>Reclassified to Old Product</fullName>
            </value>
            <value>
                <fullName>Reclassified to Consumer Storage</fullName>
            </value>
            <value>
                <fullName>Reclassified Non-Quality</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
            <value>
                <fullName>Corrected Postal Code</fullName>
            </value>
            <value>
                <fullName>Combined Duplicate Complaints</fullName>
            </value>
            <value>
                <fullName>Changed Plant Code</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Listened to Call</fullName>
            </value>
            <value>
                <fullName>Updated Category 3</fullName>
            </value>
            <value>
                <fullName>Updated Category 4</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Removed OTDC</fullName>
            </value>
            <value>
                <fullName>Updated Package Type &amp; Package Size</fullName>
            </value>
            <value>
                <fullName>Updated Country Code</fullName>
            </value>
            <value>
                <fullName>Updated Category 3 &amp; 4</fullName>
            </value>
            <value>
                <fullName>Updated OTDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>