force-app/main/default/objects/Case/fields/Ad_related__c.field-meta.xml
<CustomField>
    <fullName>Ad_related__c</fullName>
    <label>Ad-related</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airing date</fullName>
            </value>
            <value>
                <fullName>Costumes and accessories</fullName>
            </value>
            <value>
                <fullName>Point of indication place, number of times, sound</fullName>
            </value>
            <value>
                <fullName>Song</fullName>
            </value>
            <value>
                <fullName>Performer name</fullName>
            </value>
            <value>
                <fullName>Contents</fullName>
            </value>
            <value>
                <fullName>Broadcast date and time</fullName>
                <isActive>false</isActive>
                <label>Broadcast date and time</label>
            </value>
            <value>
                <fullName>Costume / accessory</fullName>
                <isActive>false</isActive>
                <label>Costume / accessory</label>
            </value>
            <value>
                <fullName>Display location · frequency · pointed out sound</fullName>
                <isActive>false</isActive>
                <label>Display location · frequency · pointed out sound</label>
            </value>
            <value>
                <fullName>Name of the performer</fullName>
                <isActive>false</isActive>
                <label>Name of the performer</label>
            </value>
            <value>
                <fullName>content</fullName>
                <isActive>false</isActive>
                <label>content</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>