force-app/main/default/objects/Case/fields/Address_11__c.field-meta.xml
<CustomField>
    <fullName>Address_11__c</fullName>
    <formula>Account.Home_Postal_Code__r.Name +  Account.Home_Street_Number__c + Account.Home_Building__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address 1</label>
    <type>Text</type>
</CustomField>