force-app/main/default/objects/Case/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <description>Populated from Account (If Home_Postal_Code__c has value then Home_Postal_Code__c + Home_Prefecture__c + Home_Street_Number__c else only Home_Street_Number__c) for Japan Market</description>
    <label>Address. 1 (System Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>