force-app/main/default/objects/Case/fields/Adhoc_Case_Categorization__c.field-meta.xml
<CustomField>
    <fullName>Adhoc_Case_Categorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>High Impact Topics</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Adhoc_Case_Categorisation__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Adhoc_Case_Categorisation__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>