force-app/main/default/objects/Case/fields/Advertisement__c.field-meta.xml
<CustomField>
    <fullName>Advertisement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advertisement/Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Cases (Advertisement)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>