force-app/main/default/objects/Case/fields/Advertisement_Type__c.field-meta.xml
<CustomField>
    <fullName>Advertisement_Type__c</fullName>
    <formula>Advertisement__r.Campaign_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advertisement Type</label>
    <type>Text</type>
</CustomField>