force-app/main/default/objects/Case/fields/Age_Group1__c.field-meta.xml
<CustomField>
    <fullName>Age_Group1__c</fullName>
    <formula>TEXT(Account.Age_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Group</label>
    <type>Text</type>
</CustomField>