force-app/main/default/objects/Case/fields/Age_group__c.field-meta.xml
<CustomField>
    <fullName>Age_group__c</fullName>
    <label>Age group (System Field)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 10s</fullName>
            </value>
            <value>
                <fullName>10s</fullName>
            </value>
            <value>
                <fullName>20s</fullName>
            </value>
            <value>
                <fullName>30s</fullName>
            </value>
            <value>
                <fullName>40s</fullName>
            </value>
            <value>
                <fullName>50s</fullName>
            </value>
            <value>
                <fullName>60s</fullName>
            </value>
            <value>
                <fullName>Over 70s</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Please select from the list</fullName>
            </value>
            <value>
                <fullName>Not Set</fullName>
                <isActive>false</isActive>
                <label>Not Set</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>