force-app/main/default/objects/Case/fields/Agent_Entered_BBE_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Entered_BBE_Date__c</fullName>
    <description>Used for LATAM to store the date when the agent entered BBE information for the case
BU :- LATAM</description>
    <label>BBE Date</label>
    <type>Date</type>
</CustomField>