force-app/main/default/objects/Case/fields/Agent_Message_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Message_Code__c</fullName>
    <label>Agent Message Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Could Not Find</fullName>
            </value>
            <value>
                <fullName>Date Code Not Monday</fullName>
            </value>
            <value>
                <fullName>Digital Media</fullName>
            </value>
            <value>
                <fullName>Illegible</fullName>
            </value>
            <value>
                <fullName>No Day Code</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Unique Production</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Verified - Plant Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>