force-app/main/default/objects/Case/fields/Agent_Who_Received_1__c.field-meta.xml
<CustomField>
    <fullName>Agent_Who_Received_1__c</fullName>
    <description>Used for LATAM to capture first consumer recontact details and the agent who received the interaction.
BU :- LATAM</description>
    <label>Agent Who Received 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>