force-app/main/default/objects/Case/fields/Agent_Who_Received_2__c.field-meta.xml
<CustomField>
    <fullName>Agent_Who_Received_2__c</fullName>
    <description>Used for LATAM to capture the second agent who received the interaction
BU :- LATAM</description>
    <label>Agent Who Received 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>