force-app/main/default/objects/Case/fields/Agent_who_scheduled1__c.field-meta.xml
<CustomField>
    <fullName>Agent_who_scheduled1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for LATAM to capture the agent who scheduled the visit with the bottler.
 BU :- LATAM</description>
    <label>Agent who scheduled</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>