force-app/main/default/objects/Case/fields/Agent_who_scheduled__c.field-meta.xml
<CustomField>
    <fullName>Agent_who_scheduled__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the agent who scheduled the visit.
BU :- LATAM</description>
    <label>Agent Who Scheduled</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>