force-app/main/default/objects/Case/fields/Analysis_Done_By__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Done_By__c</fullName>
    <label>Analysis Done By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>