force-app/main/default/objects/Case/fields/Anonymization_Date__c.field-meta.xml
<CustomField>
    <fullName>Anonymization_Date__c</fullName>
    <label>Anonymization Date</label>
    <type>DateTime</type>
</CustomField>