force-app/main/default/objects/Case/fields/App_ID__c.field-meta.xml
<CustomField>
    <fullName>App_ID__c</fullName>
    <label>App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>