force-app/main/default/objects/Case/fields/App_Ver__c.field-meta.xml
<CustomField>
    <fullName>App_Ver__c</fullName>
    <label>App Ver.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>