force-app/main/default/objects/Case/fields/Appearance_of_Product__c.field-meta.xml
<CustomField>
    <fullName>Appearance_of_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for LATAM to determine whether the product appearance has been checked.
BU :- LATAM</description>
    <label>Appearance of Product</label>
    <type>Checkbox</type>
</CustomField>