force-app/main/default/objects/Case/fields/Appearance_of_Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Appearance_of_Product_Details__c</fullName>
    <description>Used for LATAM to indicate product appearance details.
BU:- LATAM</description>
    <label>Appearance of Product Details</label>
    <type>TextArea</type>
</CustomField>