force-app/main/default/objects/Case/fields/Approved_Message__c.field-meta.xml
<CustomField>
    <fullName>Approved_Message__c</fullName>
    <label>Approved Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>