force-app/main/default/objects/Case/fields/Assigned_to_bottler_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_bottler_Date_Time__c</fullName>
    <description>This field is used to track when the case was assigned to bottler by agent. It is updated using workflow and used in reports.</description>
    <label>Assigned to bottler Date/Time</label>
    <type>DateTime</type>
</CustomField>