force-app/main/default/objects/Case/fields/Attorney_Retained_Involved__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Retained_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attorney Retained/Involved</label>
    <type>Checkbox</type>
</CustomField>