force-app/main/default/objects/Case/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <description>Used for LATAM to define business hours availability for the case. 
BU :- LATAM</description>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>