force-app/main/default/objects/Case/fields/BatchUpdate__c.field-meta.xml
<CustomField>
    <fullName>BatchUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BottlerIssueBatchUpdate</label>
    <type>Checkbox</type>
</CustomField>