force-app/main/default/objects/Case/fields/BB_BEST_If_Used_By__c.field-meta.xml
<CustomField>
    <fullName>BB_BEST_If_Used_By__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BB/BEST If Used by</label>
    <type>Checkbox</type>
</CustomField>