force-app/main/default/objects/Case/fields/BBB__c.field-meta.xml
<CustomField>
    <fullName>BBB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BBB</label>
    <type>Checkbox</type>
</CustomField>