force-app/main/default/objects/Case/fields/BBD__c.field-meta.xml
<CustomField>
    <fullName>BBD__c</fullName>
    <inlineHelpText>Format - YYYY/MM/DD</inlineHelpText>
    <label>BBD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>