force-app/main/default/objects/Case/fields/BBD_code__c.field-meta.xml
<CustomField>
    <fullName>BBD_code__c</fullName>
    <label>BBD code</label>
    <type>Date</type>
</CustomField>