force-app/main/default/objects/Case/fields/BBE_Date__c.field-meta.xml
<CustomField>
    <fullName>BBE_Date__c</fullName>
    <description>Used for LATAM to store the BBE date for the case.
BU :- LATAM</description>
    <label>BBE Date</label>
    <type>Date</type>
</CustomField>