force-app/main/default/objects/Case/fields/Beverage_Category__c.field-meta.xml
<CustomField>
    <fullName>Beverage_Category__c</fullName>
    <description>This field pulls Beverage Category field data from respective product mentioned on the case.</description>
    <formula>Product__r.Beverage_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beverage Category</label>
    <type>Text</type>
</CustomField>