force-app/main/default/objects/Case/fields/Beverage_Storage__c.field-meta.xml
<CustomField>
    <fullName>Beverage_Storage__c</fullName>
    <label>Beverage Storage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chilled (ice)</fullName>
            </value>
            <value>
                <fullName>Chilled (Refrigeror)</fullName>
                <label>Chilled (Refrigerator)</label>
            </value>
            <value>
                <fullName>Garage</fullName>
            </value>
            <value>
                <fullName>Outside</fullName>
            </value>
            <value>
                <fullName>Room Temp</fullName>
            </value>
            <value>
                <fullName>Shed</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>NotAvailable</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>