force-app/main/default/objects/Case/fields/Beyond_Can_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Beyond_Can_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beyond Can Warranty</label>
    <type>Checkbox</type>
</CustomField>