force-app/main/default/objects/Case/fields/Beyond_Optimum_Taste_Date__c.field-meta.xml
<CustomField>
    <fullName>Beyond_Optimum_Taste_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beyond OTD</label>
    <type>Checkbox</type>
</CustomField>