force-app/main/default/objects/Case/fields/BFU_Handled_By__c.field-meta.xml
<CustomField>
    <fullName>BFU_Handled_By__c</fullName>
    <label>BFU Handled By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>