force-app/main/default/objects/Case/fields/Body_Injuries__c.field-meta.xml
<CustomField>
    <fullName>Body_Injuries__c</fullName>
    <description>Used for LATAM to determine body injuries during the initial risk evaluation.
BU:- LATAM</description>
    <label>Body Injuries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Injuries</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Allergy</fullName>
            </value>
            <value>
                <fullName>Colic, stomach ache</fullName>
            </value>
            <value>
                <fullName>Diarrhea</fullName>
            </value>
            <value>
                <fullName>Headache</fullName>
            </value>
            <value>
                <fullName>Burning throat</fullName>
            </value>
            <value>
                <fullName>Stinging mouth</fullName>
            </value>
            <value>
                <fullName>Stained mouth</fullName>
            </value>
            <value>
                <fullName>Discomfort</fullName>
            </value>
            <value>
                <fullName>Vomit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>