force-app/main/default/objects/Case/fields/Bottler_case_access_date_time__c.field-meta.xml
<CustomField>
    <fullName>Bottler_case_access_date_time__c</fullName>
    <label>Bottler case access date/time</label>
    <type>DateTime</type>
</CustomField>