force-app/main/default/objects/Case/fields/Bottler_Case_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Bottler_Case_Completed_Date_Time__c</fullName>
    <description>This field is used to track when bottler completed working on a case. It is updated using a workflow and used in csae reports.</description>
    <label>Bottler Case Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>