force-app/main/default/objects/Case/fields/Bottler_City__c.field-meta.xml
<CustomField>
    <fullName>Bottler_City__c</fullName>
    <description>Used for LATAM to determine the city of the bottler associated with the case. 
BU :- LATAM</description>
    <label>Bottler City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>