force-app/main/default/objects/Case/fields/Bottler_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Bottler_Closed_Date__c</fullName>
    <label>Bottler Closed Date</label>
    <type>DateTime</type>
</CustomField>