force-app/main/default/objects/Case/fields/Bottler_Coupon_2__c.field-meta.xml
<CustomField>
    <fullName>Bottler_Coupon_2__c</fullName>
    <label>Bottler Coupon 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>