force-app/main/default/objects/Case/fields/Bottler_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Bottler_Coupon__c</fullName>
    <label>Bottler Coupon 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>