force-app/main/default/objects/Case/fields/Bottler_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Bottler_Created_Date__c</fullName>
    <label>Bottler Created Date</label>
    <type>DateTime</type>
</CustomField>