force-app/main/default/objects/Case/fields/Bottler_Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Bottler_Public_Group__c</fullName>
    <label>Bottler Public Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>