force-app/main/default/objects/Case/fields/Bottler_State__c.field-meta.xml
<CustomField>
    <fullName>Bottler_State__c</fullName>
    <description>Used for LATAM to determine the state of the bottler associated with the case. 
BU :- LATAM</description>
    <label>Bottler State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>