force-app/main/default/objects/Case/fields/BottlerHQ__c.field-meta.xml
<CustomField>
    <fullName>BottlerHQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BottlerHQ</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Bottler, COC Bottler HQ, CSC Bottler HQ</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Company Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (BottlerHQ)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>