force-app/main/default/objects/Case/fields/Brand_Name1__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name1__c</fullName>
    <description>used in case notification</description>
    <label>Brand (System Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>