force-app/main/default/objects/Case/fields/Brand_name__c.field-meta.xml
<CustomField>
    <fullName>Brand_name__c</fullName>
    <label>Brand name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand</valueSetName>
    </valueSet>
</CustomField>