force-app/main/default/objects/Case/fields/Burst_Alert__c.field-meta.xml
<CustomField>
    <fullName>Burst_Alert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Burst Alert</label>
    <referenceTo>Burst_Alert__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>