force-app/main/default/objects/Case/fields/Burst_Alert_Name__c.field-meta.xml
<CustomField>
    <fullName>Burst_Alert_Name__c</fullName>
    <label>Burst Alert Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>