force-app/main/default/objects/Case/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Used for LATAM to determine the business unit associated with the case.
BU :- LATAM</description>
    <formula>IF(ISBLANK(TEXT(Country_Code__c)),&apos;&apos;,
IF(CONTAINS(&quot;MX:BR:AR:UY:PY:BO:CL:EC:CO:PE:CR:GT:SV:NI:HN:PN:TT:JM:DO&quot;,TEXT(Country_Code__c)),&quot;LATAM&quot;,&apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>