force-app/main/default/objects/Case/fields/Call_prefecture__c.field-meta.xml
<CustomField>
    <fullName>Call_prefecture__c</fullName>
    <label>Call prefecture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hokkaido</fullName>
            </value>
            <value>
                <fullName>Aomori</fullName>
            </value>
            <value>
                <fullName>Iwate</fullName>
            </value>
            <value>
                <fullName>Akita</fullName>
            </value>
            <value>
                <fullName>Miyagi</fullName>
            </value>
            <value>
                <fullName>Yamagata</fullName>
            </value>
            <value>
                <fullName>Fukushima</fullName>
            </value>
            <value>
                <fullName>Ibaraki</fullName>
            </value>
            <value>
                <fullName>Tochigi</fullName>
            </value>
            <value>
                <fullName>Gunma</fullName>
            </value>
            <value>
                <fullName>Saitama</fullName>
            </value>
            <value>
                <fullName>Chiba</fullName>
            </value>
            <value>
                <fullName>Tokyo</fullName>
            </value>
            <value>
                <fullName>Kanagawa</fullName>
            </value>
            <value>
                <fullName>Niigata</fullName>
            </value>
            <value>
                <fullName>Fukui</fullName>
            </value>
            <value>
                <fullName>Ishikawa</fullName>
            </value>
            <value>
                <fullName>Toyama</fullName>
            </value>
            <value>
                <fullName>Shizuoka</fullName>
            </value>
            <value>
                <fullName>Yamanashi</fullName>
            </value>
            <value>
                <fullName>Nagano</fullName>
            </value>
            <value>
                <fullName>Aichi</fullName>
            </value>
            <value>
                <fullName>Gifu</fullName>
            </value>
            <value>
                <fullName>Mie</fullName>
            </value>
            <value>
                <fullName>Wakayama</fullName>
            </value>
            <value>
                <fullName>Shiga</fullName>
            </value>
            <value>
                <fullName>Nara</fullName>
            </value>
            <value>
                <fullName>Kyoto</fullName>
            </value>
            <value>
                <fullName>Osaka</fullName>
            </value>
            <value>
                <fullName>Hyōgo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>