force-app/main/default/objects/Case/fields/Call_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Call_Purpose__c</fullName>
    <label>Call Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBB</fullName>
            </value>
            <value>
                <fullName>Board Of Health</fullName>
            </value>
            <value>
                <fullName>Boycott</fullName>
            </value>
            <value>
                <fullName>FDA</fullName>
            </value>
            <value>
                <fullName>Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Protest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>