force-app/main/default/objects/Case/fields/Call_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Received_Date__c</fullName>
    <inlineHelpText>Format - YYYY/MM/DD HH:MM</inlineHelpText>
    <label>Received Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>