force-app/main/default/objects/Case/fields/Caller_type11__c.field-meta.xml
<CustomField>
    <fullName>Caller_type11__c</fullName>
    <formula>TEXT(Account.Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caller type</label>
    <type>Text</type>
</CustomField>