force-app/main/default/objects/Case/fields/Can_lid_code__c.field-meta.xml
<CustomField>
    <fullName>Can_lid_code__c</fullName>
    <label>Can lid code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>