force-app/main/default/objects/Case/fields/Can_Manufacturing_Code__c.field-meta.xml
<CustomField>
    <fullName>Can_Manufacturing_Code__c</fullName>
    <label>Can Manufacturing Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>