force-app/main/default/objects/Case/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Duplicated case</fullName>
            </value>
            <value>
                <fullName>Email Reply</fullName>
            </value>
            <value>
                <fullName>Invalid Call</fullName>
            </value>
            <value>
                <fullName>Junk Email</fullName>
            </value>
            <value>
                <fullName>Systematic failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>