force-app/main/default/objects/Case/fields/Care_Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>Care_Team_Comments__c</fullName>
    <description>Used for LATAM to store Care Team comments for the case. 
BU :- LATAM</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>