force-app/main/default/objects/Case/fields/Case_Brand__c.field-meta.xml
<CustomField>
    <fullName>Case_Brand__c</fullName>
    <formula>IF( ISBLANK(TEXT( Product__r.Brand__c )),(IF( ISBLANK(TEXT(Other_Brand__c)), Null, TEXT(Other_Brand__c))),TEXT( Product__r.Brand__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Brand</label>
    <type>Text</type>
</CustomField>